syntax = "proto3";

package io.kx.loanproc.domain;

option java_outer_classname = "LoanProcDomain";

enum LoanProcDomainStatus {
  STATUS_UNKNOWN = 0;
  STATUS_READY_FOR_REVIEW = 1;
  STATUS_APPROVED = 2;
  STATUS_DECLINED = 3;
}

message LoanProcDomainState {
  string reviewer_id = 1;
  LoanProcDomainStatus status = 2;
  string decline_reason = 3;
  int64 last_update_timestamp = 4;
}

message ProcessStarted {
  string loan_app_id = 1;
  int64 event_timestamp = 6;
}

message Approved {
  string loan_app_id = 1;
  string reviewer_id = 2;
  int64 event_timestamp = 3;
}

message Declined {
  string loan_app_id = 1;
  string reviewer_id = 2;
  string reason = 3;
  int64 event_timestamp = 4;
}